# memelibre_server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  artillery.yaml  cargo fmt  todo.md
.github/workflows/: build_master.yaml  build_preview.yaml  cleanup_preview.yaml  docker.yaml
k8/: certificate.yaml  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  letsencrypt-clusterissuer.yaml  secret.yaml  service.yaml
src/: lib.rs  macros.rs  main.rs  models.rs
src/controllers/: auth.rs  auth_callback.rs  delete.rs  error.rs  health.rs  home.rs  likes.rs  load_more.rs  login.rs  meme.rs  meme_get_all.rs  meme_get_by_id.rs  meme_post.rs  mod.rs  signup.rs  upload.rs
src/controllers/auth/: auth.rs  login.rs  logout.rs  me.rs  mod.rs
src/controllers/comment/: post.rs
src/controllers/like/: post.rs
src/controllers/meme/: get.rs  get_by_id.rs  mod.rs  post.rs
src/controllers/save/: get.rs  post.rs
src/controllers/user/: put.rs
src/controllers/users/: create.rs  mod.rs
src/html/: _meme.html  _metadata.html  _navbar.html  _notification.html  base.html  home.html  login.html  meme.html  signup.html  upload.html
src/middlewares/: mod.rs  with_auth.rs  with_is_admin.rs
src/public/styles/: global.css  home.css  meme.css  navbar.css  notification.css  upload.css
src/routes/: mod.rs
src/templates/: _meme.html
src/utils/: mod.rs
templates/: _meme.html  _navbar.html  _notification.html  base.html  error.html  home.html  meme.html  upload.html
