[package]
name = "memelibre"
version = "0.1.0"
edition = "2021"
default-run = "memelibre"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
bytes = "1.10.1"
image = "0.25.6"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
uuid = { version = "1.17.0", features = ["v4"] }
webp = "0.3.0"
